<resources>
    <string name="app_name">ModernArtUI</string>

    <!-- Main UI buttons -->
    <string name="create_new_button">Create new</string>
    <string name="recolor_button">Recolor</string>

    <!-- Menu items -->
    <string name="save_action">Save as image</string>
    <string name="info_action">More info</string>

    <!-- More info dialog -->
    <string name="info_dialog_title">More info</string>

    <string name="assignment_info_text">
        This app was made as an assignment for the first part of the coursera course
        \"Programming Mobile Applications for Android Handheld Systems\".
    </string>

    <string name="inspired_by_info_text">
        It was inspired by the works of artists such as Piet Mondrian and Ben Nicholson.
    </string>

    <string name="click_below_info_text">
        Click below to learn more!
    </string>

    <string name="visit_MOMA_button_text">Visit MOMA</string>
    <string name="not_now_button_text">Not now</string>
    <string name="moma_link">https://www.moma.org/</string>
    <!--==============-->

    <!-- Permission rationales and messages -->
    <string name="external_storage_permission_rationale">Permission to write to external storage is needed to save the image.</string>
    <string name="external_storage_permission_denied">Unable to perform the action because permission to write was denied.</string>

    <!-- Artwork parameters -->
    <string name="saturation">Saturation</string>
    <string name="depth_limit">Depth limit</string>
    <string name="stroke_width">Stroke width</string>

    <!-- Errors / warnings / exceptions -->
    <string name="error_dialog_title">Error</string>
    <string name="impossible_to_save_error">It was impossible to save the image.</string>
    <string name="unable_to_create_gallery_folder_error">Unable to create a folder where to save the image.</string>
    <string name="no_app_for_opening_image">Unable to open the image just saved. No installed app was found for carrying out the action.</string>

    <!-- Info messages -->
    <string name="image_saved_message">Image successfully saved! Opening it...</string>

    <!-- Generic-use resources -->
    <string name="close_button_text">Close</string>
</resources>
