<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.android.modernartui.com.janluke.android.modernartui.ShowArtworkActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/artwork_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#000">
            <LinearLayout
                android:id="@+id/column1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#ffffff"
                    android:layout_margin="2dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#ff4949"
                    android:layout_margin="2dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/column2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#ff3636"
                    android:layout_margin="2dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#ffffff"
                    android:layout_margin="2dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="#53ff38"
                    android:layout_margin="2dp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dp"
        android:paddingRight="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="2dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/ic_saturation_black_100"
                android:layout_gravity="center|end"
                android:tooltipText="@string/saturation"/>
            <SeekBar
                android:id="@+id/saturation_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:max="@integer/saturation_seekbar_max" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_depth_96"
                android:layout_gravity="center|end"
                android:tooltipText="@string/depth_limit"/>
            <SeekBar
                android:id="@+id/max_depth_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/grid_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_grid_on_black_36dp"
                android:layout_gravity="center|end"
                android:tooltipText="@string/stroke_width"/>
            <SeekBar
                android:id="@+id/grid_size_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:max="@integer/max_grid_size_in_dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/new_artwork_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/create_new_button"
                android:drawableLeft="@drawable/ic_brush_white_24dp"
                android:theme="@style/myButtonTheme" />

            <Button
                android:id="@+id/recolor_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/recolor_button"
                android:drawableLeft="@drawable/ic_palette_white_24dp"
                android:theme="@style/myButtonTheme"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>